[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dropseq_hdf5"
version = "3.0.2"
dependencies = [
    "anndata==0.7.6",
    "tables==3.6.1",
    "numpy==1.21.2",
    "scipy==1.7.1",
]
authors = [
  { name="Alec Wysoker", email="alecw@broadinstitute.org" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/Drop-seq/"
Issues = "https://github.com/broadinstitute/Drop-seq/issues"

[project.scripts]
dropseq_hdf5 = "dropseq_hdf5.cli:main"
