[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dropseq_aggregation"
version = "3.0.2"
dependencies = [
    "pandas",
]
authors = [
  { name="Alec Wysoker", email="alecw@broadinstitute.org" },
]
description = "Command-line tools for converting from various HDF5 formats to Drop-seq format."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/Drop-seq/"
Issues = "https://github.com/broadinstitute/Drop-seq/issues"

[project.scripts]
join_and_filter_tsv = "dropseq_aggregation.join_and_filter_tsv:main"
cat_tsvs = "dropseq_aggregation.cat_tsvs:main"
