[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dropseq_eqtl"
version = "3.0.0"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pyarrow",
]
authors = [
  { name="Alec Wysoker", email="alecw@broadinstitute.org" },
]
description = "python tools for tensorQTL workflow."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/Drop-seq/"
Issues = "https://github.com/broadinstitute/Drop-seq/issues"

[project.scripts]
normalize_tensorqtl_expression = "dropseq_eqtl.normalize_tensorqtl_expression:main"
prepare_tensorqtl_data = "dropseq_eqtl.prepare_tensorqtl_data:main"
merge_parquet_files = "dropseq_eqtl.merge_parquet_files:main"
