[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dropseq_hdf5"
version = "3.0.2"
dependencies = [
    "anndata",
    "numpy",
    "pandas",
    "scipy",
    "tables",
]
authors = [
  { name="Alec Wysoker", email="alecw@broadinstitute.org" },
]
description = "Command-line tools for converting from various HDF5 formats to Drop-seq format."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/Drop-seq/"
Issues = "https://github.com/broadinstitute/Drop-seq/issues"

[project.scripts]
dropseq_hdf5 = "dropseq_hdf5.cli:main"
