[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dropseq_metadata"
version = "3.0.0"
dependencies = [
    "pyyaml",
]
authors = [
  { name="Alec Wysoker", email="alecw@broadinstitute.org" },
]
description = "Command-line tools for querying reference metadata files."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/Drop-seq/"
Issues = "https://github.com/broadinstitute/Drop-seq/issues"

[project.scripts]
lookup_contig_groups = "dropseq_metadata.lookup_contig_groups:main"
